--- a/package.json
+++ b/package.json
@@ -1,18 +1,52 @@
 {
   "name": "projetnodes2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Projet reproduisant un service d'hôtellerie",
   "main": "app.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "homepage": "https://github.com/AugustinPredhomme/ProjetNodeS2#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AugustinPredhomme/ProjetNodeS2.git"
   },
-  "keywords": [],
-  "author": "",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/app.ts",
+    "dev": "concurrently \tsc --watch\" \"tsnd --respawn app.ts\""
+  },
+  "keywords": [
+    "projet",
+    "hotel",
+    "3wa",
+    "fsd"
+  ],
+  "author": "Augustin Prédhomme <augustin.predhomme@3wa.io",
+  "bugs": {
+    "url": "https://github.com/AugustinPredhomme/ProjetNode/issues",
+    "email": "augustin.predhomme@3wa.io"
+  },
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.40.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.14.10",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
