--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.0",
+        "projetnodes2": "file:",
+        "winston": "^3.14.2",
         "zod": "^3.23.8"
     },
     "devDependencies": {
