--- a/package.json
+++ b/package.json
@@ -43,11 +43,16 @@
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.14.10",
+        "@types/supertest": "^6.0.2",
         "concurrently": "^8.2.2",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.4",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
