--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     },
     "license": "ISC",
     "dependencies": {
+        "ProjetNodeS3-server": "file:",
         "argon2": "^0.40.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -36,8 +37,8 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.0",
+        "multer": "1.4.5-lts.1",
         "projetnodes2": "file:",
-        "ProjetNodeS3-server": "file:",
         "winston": "^3.14.2",
         "zod": "^3.23.8"
     },
@@ -48,6 +49,7 @@
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mongoose": "^5.11.97",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.14.10",
         "@types/supertest": "^6.0.2",
         "concurrently": "^8.2.2",
