--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,7 +30,9 @@
     },
     "license": "ISC",
     "dependencies": {
+        "ProjetNodeS3-server": "file:",
         "argon2": "^0.40.3",
+        "cookie": "^0.6.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -44,11 +46,12 @@
         "pg": "^8.12.0",
         "postgres": "^3.4.4",
         "projetnodes2": "file:",
-        "ProjetNodeS3-server": "file:",
+        "socket.io": "^4.7.5",
         "winston": "^3.14.2",
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/cookie": "^0.6.0",
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
@@ -68,5 +71,9 @@
         "ts-node": "^10.9.2",
         "tsx": "^4.19.0",
         "typescript": "^5.5.3"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.8",
+        "utf-8-validate": "^6.0.4"
     }
 }
